--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,9 @@
         <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
             <p>Y este es el párrafo de inicio</p>
+            <p>Los blogs son la mejor forma de compartir información y tus ideas.
+                Mucho mas que ir a conferencias o salir en youtube
+            </p>
         </div>
     </div>
 </body>
