--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hiperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog Maestro</span>
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
@@ -19,6 +19,7 @@
             <p>Los blogs son la mejor forma de compartir información y tus ideas.
                 Mucho mas que ir a conferencias o salir en youtube
             </p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
