Una versión del hiperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="cabecera">
+        <div id="bienvenido a Hiperblog 2.0">
             Hiperblog
             <span id="tagline">Tu blog Maestro</span>
          </div>
